# thunderstorm_python

./: README.md  ROADMAP.md  __init__.py  evaluation.py  filters.py  pyproject.toml  requirements.txt  simulation.py
tests/: __init__.py  test_detection.py  test_filters.py  test_fitting.py  test_simulation.py
